--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/MarcaEquipamento/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/MarcaEquipamento/Index.cshtml
@@ -13,9 +13,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h2 class="card-title">
-                                    Marcas de Ares-condicionados Cadastradas
+                                    Marcas de Condicionadores Cadastradas
                                 </h2>
-                                <a class="btn btn-primary" style="float:right" asp-controller="MarcaEquipamento" asp-action="Create">Adicionar Marca de Ar-Condicionado</a>
+                                <a class="btn btn-primary" style="float:right" asp-controller="MarcaEquipamento" asp-action="Create">Adicionar Marca de Ar Condicionado</a>
                             </div>
                         </div>
                     </div>
