--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
@@ -220,6 +220,12 @@
                             <p>Marca de Equipamento</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link pl-4" asp-controller="ModeloEquipamento" asp-action="Index">
+                            <i class="nav-icon fas fa-temperature-low"></i>
+                            <p>Modelo de Equipamento</p>
+                        </a>
+                    </li>
                     <li class="nav-header">COLABORADORES</li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Usuario" asp-action="Index">
