--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ModeloEquipamento/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ModeloEquipamento/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model Model.ModeloEquipamentoModel
-
+﻿@model Model.ViewModel.ModeloEquipamentoViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -17,21 +16,69 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="col-md-5">
                                 <div class="form-group" id="ListElements">
-                                    <label asp-for="MarcaEquipamentoID" class="control-label">Marca</label>
-                                    @Html.DropDownListFor(model => model.MarcaEquipamentoID, ViewBag.MarcaEquipamento as SelectList, new
+                                    <label asp-for="ModeloEquipamento.MarcaEquipamentoID" class="control-label">Marca</label>
+                                    @Html.DropDownListFor(model => model.ModeloEquipamento.MarcaEquipamentoID, ViewBag.MarcaEquipamento as SelectList, new
                                         { @class = "form-control" })
-                                    <span asp-validation-for="MarcaEquipamentoID" class="text-danger"></span>
+                                    <span asp-validation-for="ModeloEquipamento.MarcaEquipamentoID" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-md-7">
                                 <div class="form-group">
-                                    <label asp-for="Nome" class="control-label"></label>
-                                    <textarea asp-for="Nome" class="form-control" maxlength="100" rows="1" style="width: 70%;resize:none"></textarea>
-                                    <span asp-validation-for="Nome" class="text-danger"></span>
+                                    <label asp-for="ModeloEquipamento.Nome" class="control-label"></label>
+                                    <textarea asp-for="ModeloEquipamento.Nome" class="form-control" maxlength="100" rows="1" style="width: 70%;resize:none"></textarea>
+                                    <span asp-validation-for="ModeloEquipamento.Nome" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
+                        <div class="ocupation col-md-10">
+                            <div id="ccodigo" class="form-group pr-2">
+                                <label title="Codigo" class="control-label">Código da Operação</label>
+                                <textarea id="codigo" class="form-control" type="text" name="codigo"></textarea>
+                            </div>
 
+                            <div id="coperacao" class="form-group d-inline-block">
+                                <label name="Operacao" class="control-label">Operação</label>
+                                <select name="operacao" id="operacao">
+                                    @foreach (var item in ViewBag.Operacoes)
+                                    {
+                                        <option value="@item.Id"> @item.Titulo </option>
+                                    }
+                                </select>
+                                <span name="operacao" class="ml-2 text-danger"></span>
+                            </div>
+
+
+                            <div id="cbotao" class="form-group align-element">
+                                <a id="add-novo-horario" onclick="AdicionarNovoCodigo();document.getElementById('codigo').value=''; " class="btn btn-primary text-white">
+                                    <i class="nav-icon fa fa-plus"></i>
+                                </a>
+                            </div>
+
+                        </div>
+
+                        <section id="codigos" class="content">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h3 class="card-title">Códigos Adicionados</h3>
+                                            </div>
+                                            <div class="card-body">
+                                                <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                                    <thead>
+                                                        <tr>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody id="container-codigo">
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                         <div class="card-footer">
                             <div class="col-md-4">
                                 <input type="submit" value="Salvar" class="btn btn-success" /> |
